# DB_query_call

./: BUILD_GUIDE.md  CMakeLists.txt  CMakeLists_Windows.txt  README.md  build_with_qtmqtt.sh  main.cpp  remote_query_window.cpp  remote_query_window.h
